@@ -1,3 +1,6 @@
+2009-12-07
+    * extra controls: new button types
+
 2009-12-06
     * moved the "show note names" option from preferences dialog to view menu
     
